@@ -19,6 +19,7 @@ group { name: "elm/notify/block_events/default";
 }
 group { name: "elm/notify/top/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -96,14 +97,21 @@ group { name: "elm/notify/top/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/center/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "bt_dis_base.png" COMP;
    }
@@ -145,10 +153,14 @@ group { name: "elm/notify/center/default";
          type: RECT;
          description { state: "default" 0.0;
             color: 0 0 0 0 ;
+            rel1.relative: 0.0 -1.0;
+            rel2.relative: 1.0 0.0;
          }
          description { state: "visible" 0.0;
             inherit: "default" 0.0;
             color: 255 255 255 255;
+            rel1.relative: 0.0 0.0;
+            rel2.relative: 1.0 1.0;
          }
       }
    }
@@ -160,15 +172,22 @@ group { name: "elm/notify/center/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "clipper";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 
 group { name: "elm/notify/bottom/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -246,14 +265,21 @@ group { name: "elm/notify/bottom/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/left/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -331,14 +357,21 @@ group { name: "elm/notify/left/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/right/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -416,14 +449,21 @@ group { name: "elm/notify/right/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/top_left/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -501,14 +541,21 @@ group { name: "elm/notify/top_left/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/top_right/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -586,14 +633,21 @@ group { name: "elm/notify/top_right/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/bottom_left/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -671,14 +725,21 @@ group { name: "elm/notify/bottom_left/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
 group { name: "elm/notify/bottom_right/default";
      //this group is a design similar to the inwin group
+   data.item: "emit_hide_finished_signal" "yes";
    images {
       image: "shad_circ.png" COMP;
       image: "bt_dis_base.png" COMP;
@@ -756,9 +817,15 @@ group { name: "elm/notify/bottom_right/default";
          transition: LINEAR 0.5;
       }
       program { name: "hide";
-         signal: "hide";
+         signal: "elm,state,hide";
+         source: "elm";
          action: STATE_SET "default" 0.0;
          target: "base";
+         transition: LINEAR 0.5;
+         after: "hide_finished";
+      }
+      program { name: "hide_finished";
+         action: SIGNAL_EMIT "elm,action,hide,finished" "elm";
       }
    }
 }
