@@ -241,6 +241,7 @@ _elm_notify_smart_move(Eo *obj, void *_pd EINA_UNUSED, va_list *list)
 static Eina_Bool
 _timer_cb(void *data)
 {
+   const char *hide_signal;
    Evas_Object *obj = data;
 
    ELM_NOTIFY_DATA_GET(obj, sd);
@@ -248,7 +249,16 @@ _timer_cb(void *data)
    sd->timer = NULL;
    if (!evas_object_visible_get(obj)) goto end;
 
-   evas_object_hide(obj);
+   hide_signal = edje_object_data_get(sd->notify, "emit_hide_finished_signal");
+   if ((hide_signal) && (!strcmp(hide_signal, "yes")))
+     {
+        sd->in_timeout = EINA_TRUE;
+        edje_object_signal_emit(sd->notify, "elm,state,hide", "elm");
+     }
+   else //for backport supporting: edc without emitting hide finished signal
+     {
+        evas_object_hide(obj);
+     }
    evas_object_smart_callback_call(obj, SIG_TIMEOUT, NULL);
 
 end:
@@ -271,6 +281,8 @@ _elm_notify_smart_show(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
    Elm_Notify_Smart_Data *sd = _pd;
 
+   sd->had_hidden = EINA_FALSE;
+   sd->in_timeout = EINA_FALSE;
    eo_do_super(obj, MY_CLASS, evas_obj_smart_show());
 
    evas_object_show(sd->notify);
@@ -282,12 +294,24 @@ _elm_notify_smart_show(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 static void
 _elm_notify_smart_hide(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
+   const char *hide_signal;
    Elm_Notify_Smart_Data *sd = _pd;
 
+   if (sd->had_hidden && !sd->in_timeout)
+     return;
    eo_do_super(obj, MY_CLASS, evas_obj_smart_hide());
 
-   evas_object_hide(sd->notify);
-   if (!sd->allow_events) evas_object_hide(sd->block_events);
+   hide_signal = edje_object_data_get(sd->notify, "emit_hide_finished_signal");
+   if ((hide_signal) && (!strcmp(hide_signal, "yes")))
+     {
+        if (!sd->in_timeout)
+          edje_object_signal_emit(sd->notify, "elm,state,hide", "elm");
+     }
+   else //for backport supporting: edc without emitting hide finished signal
+     {
+        evas_object_hide(sd->notify);
+        if (sd->allow_events) evas_object_hide(sd->block_events);
+     }
    ELM_SAFE_FREE(sd->timer, ecore_timer_del);
 }
 
@@ -434,6 +458,18 @@ _elm_notify_smart_content_unset(Eo *obj, void *_pd, va_list *list)
 }
 
 static void
+_hide_finished_cb(void *data,
+                  Evas_Object *obj __UNUSED__,
+                  const char *emission __UNUSED__,
+                  const char *source __UNUSED__)
+{
+   ELM_NOTIFY_DATA_GET(data, sd);
+   sd->had_hidden = EINA_TRUE;
+   evas_object_hide(sd->notify);
+   if (!sd->allow_events) evas_object_hide(sd->block_events);
+}
+
+static void
 _elm_notify_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
    Elm_Notify_Smart_Data *priv = _pd;
@@ -448,6 +484,8 @@ _elm_notify_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 
    evas_object_event_callback_add
      (obj, EVAS_CALLBACK_RESTACK, _restack_cb, obj);
+   edje_object_signal_callback_add
+      (priv->notify, "elm,action,hide,finished", "elm", _hide_finished_cb, obj);
 
    elm_widget_can_focus_set(obj, EINA_FALSE);
    elm_notify_align_set(obj, 0.5, 0.0);
@@ -458,6 +496,8 @@ _elm_notify_smart_del(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
    Elm_Notify_Smart_Data *sd = _pd;
 
+   edje_object_signal_callback_del_full
+      (sd->notify, "elm,action,hide,finished", "elm", _hide_finished_cb, obj);
    elm_notify_parent_set(obj, NULL);
    elm_notify_allow_events_set(obj, EINA_FALSE);
    if (sd->timer) ecore_timer_del(sd->timer);
